Added further styling and centered video player.

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,14 @@ button:hover {
   padding: 3px 7px;
   font-size: 17px;
 }
+.video-item iframe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-top: 0;
+}
+
