--- a/src/components/CommentForm/CommentForm.css
+++ b/src/components/CommentForm/CommentForm.css
@@ -1,5 +1,5 @@
 .comm-form {
-    background-color: black;
+    background-color: rgb(133, 129, 129);
     border-radius: 15px;
     padding-bottom: 3px;
     width: 495px;
@@ -21,7 +21,7 @@
   }
   
   .comm-button {
-    background-color: orangered;
+    background-color: rgb(151, 141, 145);
     color: black;
     font-weight: bold;
     border-radius: 10px;
