--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -28,7 +28,7 @@
   }
   
   .search-button {
-    background-color: darkkhaki;
+    background-color: rgb(133, 129, 129);
     color: black;
     font-weight: bold;
     border-radius: 10px;
